# file-transfer-protocol

./: .gitignore  CMakeLists.txt
include/transfer/: packets.h  session.h
src/: receiver.cpp  receiver.h  sender.cpp  sender.h  session.cpp  transfer_agent.h
tests/: CMakeLists.txt  basic_transfer.cpp  fake_channel.cpp  fake_channel.h
